:hammer: fixed need to double swipe issue on mobile

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -22,9 +22,10 @@ html {
   }
 }
 .section {
-  background-color: #FFFFFF;
-  text-align: center;
+  // background-color: #FFFFFF;
   // border: 1px solid red;
+  text-align: center;
+  margin: 0 auto;
   height: 100vh !important;
   display: flex;
   flex: 1;
